--- a/CSS - Principal.css
+++ b/CSS - Principal.css
@@ -1993,3 +1993,11 @@ h3#userNames {
     text-align: center;
     text-transform: uppercase;
 }
+
+
+@media screen and (max-width: 480px) {
+ h3#userNames {
+     display:none
+ }
+
+}
