--- a/CSS - Checkout.css
+++ b/CSS - Checkout.css
@@ -13,7 +13,11 @@
 
 
 
-
+p#summaryTotalGeneral2 {
+    font-size: 20px;
+    font-weight: 500;
+    margin-bottom: 19px;
+}
 
 .error-message {
     color: red;
